--- a/mandate-settings.html
+++ b/mandate-settings.html
@@ -11,6 +11,8 @@
     <title>Your Instructions - Chilla by Beaverly</title>
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/dashboard.css">
+    <link rel="stylesheet" href="css/broker-manager.css">
+    <script src="https://unpkg.com/lucide@latest"></script>
     <style>
         .settings-container {
             max-width: 800px;
@@ -212,12 +214,20 @@
                     <button id="pause-mandate-btn" class="action-btn pause-btn">Pause instructions</button>
                     <button id="revoke-mandate-btn" class="action-btn revoke-btn">Revoke instructions</button>
                 </div>
+
+                <!-- Broker Account Manager -->
+                <div style="margin-top: 2rem;">
+                    <h2 style="margin-bottom: 1rem; color: var(--text-primary);">Connected Accounts</h2>
+                    <div id="broker-manager"></div>
+                </div>
             </div>
         </div>
     </div>
 
+    <link rel="stylesheet" href="css/broker-manager.css">
     <script src="js/config.js"></script>
     <script src="js/api-client.js"></script>
+    <script src="js/broker-manager.js"></script>
     <script>
         class MandateSettings {
             constructor() {
@@ -334,6 +344,17 @@
 
         document.addEventListener('DOMContentLoaded', () => {
             new MandateSettings();
+            
+            // Initialize Broker Account Manager
+            if (typeof BrokerAccountManager !== 'undefined') {
+                const brokerManager = new BrokerAccountManager('broker-manager');
+                console.log('✅ Broker Account Manager initialized');
+            }
+            
+            // Initialize Lucide icons
+            if (typeof lucide !== 'undefined') {
+                lucide.createIcons();
+            }
         });
     </script>
 </body>
