feat: Enhance fixed footer styles for wizard and update strategy catalog interactions

--- a/mandate-wizard.html
+++ b/mandate-wizard.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/mandate-wizard.css">
     <link rel="stylesheet" href="css/strategy-catalog.css">
+    <link rel="stylesheet" href="css/wizard-fixed-footer.css">
     <!-- Chart.js for backtest visualizations -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
 </head>
