fix: Update continue button ID in mandate wizard to align with JavaScript handlers

--- a/mandate-wizard.html
+++ b/mandate-wizard.html
@@ -68,7 +68,8 @@
                 
                 <!-- Fixed Footer for Step 1 -->
                 <div class="wizard-footer-fixed">
-                    <button id="step-1-continue" class="btn-primary" disabled>Continue</button>
+                    <!-- Aligned ID with JS handlers (step-1-next) -->
+                    <button id="step-1-next" class="btn-primary" disabled>Continue</button>
                 </div>
             </div>
 
