--- a/mandate-wizard.html
+++ b/mandate-wizard.html
@@ -28,11 +28,11 @@
         <!-- Global fixed footer for wizard actions -->
         <div class="wizard-footer-fixed" id="wizard-footer">
             <div class="footer-left">
-                <button id="wizard-cancel" class="btn-secondary">Cancel</button>
+                 <button id="wizard-cancel" class="btn-ghost" aria-label="Cancel wizard">Cancel</button>
             </div>
             <div class="footer-actions">
-                <button id="wizard-back" class="btn-secondary">Back</button>
-                <button id="wizard-action" class="btn-primary" disabled>Continue</button>
+                 <button id="wizard-back" class="btn-secondary" aria-label="Go back" aria-disabled="true">Back</button>
+                 <button id="wizard-action" class="btn-primary" disabled aria-label="Continue wizard" aria-disabled="true">Continue</button>
             </div>
         </div>
 
@@ -108,7 +108,7 @@
                         
                         <div class="risk-input-group">
                             <label for="risk-slider">Risk per signal</label>
-                            <input id="risk-slider" type="range" min="0.01" max="5.00" value="1.00" step="0.01" class="risk-slider">
+                            <input id="risk-slider" type="range" min="0.01" max="5.00" value="1.00" step="0.01" class="risk-slider" aria-label="Per-signal risk slider" aria-valuemin="0.01" aria-valuemax="5" aria-valuenow="1.00" aria-valuetext="1.00%">
                             <div class="slider-value"><span id="risk-display-value">1.00%</span></div>
                         </div>
 
@@ -129,14 +129,14 @@
                                         <div class="option-description">Set a monthly risk budget and pause behavior.</div>
                                     </div>
                                     <label class="toggle-switch">
-                                        <input class="toggle-input" type="checkbox" id="omega-enabled" checked>
+                                        <input class="toggle-input" type="checkbox" id="omega-enabled" aria-controls="omega-card" aria-label="Enable Omega monthly risk cap">
                                         <span class="toggle-label"><span class="toggle-slider"></span></span>
                                     </label>
                                 </div>
                             </summary>
                             <div class="option-body">
                                 <div class="slider-container">
-                                    <input type="range" id="omega-slider" class="risk-slider" min="1" max="10" value="5" step="0.5">
+                                    <input type="range" id="omega-slider" class="risk-slider" min="1" max="10" value="5" step="0.5" aria-label="Omega cap slider" aria-valuemin="1" aria-valuemax="10" aria-valuenow="5" aria-valuetext="5.0%">
                                     <div class="slider-value">
                                         <span id="omega-display-value">5.0%</span>
                                     </div>
@@ -158,7 +158,7 @@
                                         <div class="option-description">Auto-adjust your position sizing using volatility rules.</div>
                                     </div>
                                     <label class="toggle-switch">
-                                        <input class="toggle-input" type="checkbox" id="adaptive-risk-toggle">
+                                        <input class="toggle-input" type="checkbox" id="adaptive-risk-toggle" aria-label="Enable adaptive risk" aria-checked="false">
                                         <span class="toggle-label"><span class="toggle-slider"></span></span>
                                     </label>
                                 </div>
@@ -194,7 +194,7 @@
                     <!-- Optional: See Omega & Adaptive as inline cards above -->
 
                     <!-- Risk Implications (calculated on backend) -->
-                    <div id="risk-indicator" class="risk-indicator">
+                    <div id="risk-indicator" class="risk-indicator" role="status" aria-live="polite">
                         <!-- Populated after backend calculation -->
                     </div>
                 </div>
