feat: Refactor consent page layout and remove redundant cancel button from wizard footer

--- a/mandate-wizard.html
+++ b/mandate-wizard.html
@@ -26,10 +26,10 @@
             </div>
         </div>
         <!-- Global fixed footer for wizard actions -->
-        <div class="wizard-footer-fixed" id="wizard-footer">
-            <div class="footer-left">
-                 <button id="wizard-cancel" class="btn-ghost" aria-label="Cancel wizard">Cancel</button>
-            </div>
+           <div class="wizard-footer-fixed" id="wizard-footer">
+              <div class="footer-left">
+                  <!-- Cancel button removed per request: it was not necessary -->
+              </div>
             <div class="footer-actions">
                  <button id="wizard-back" class="btn-secondary" aria-label="Go back" aria-disabled="true">Back</button>
                  <button id="wizard-action" class="btn-primary" disabled aria-label="Continue wizard" aria-disabled="true">Continue</button>
