--- a/mandate-settings.html
+++ b/mandate-settings.html
@@ -160,7 +160,7 @@
     <div id="app">
         <div class="settings-container">
             <div class="settings-header">
-                <button class="back-btn" aria-label="Back" onclick="window.location.href='dashboard.html'">
+                <button class="back-btn" aria-label="Back" data-action="back-to-dashboard">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"/>
                     </svg>
