--- a/upgrade.html
+++ b/upgrade.html
@@ -27,7 +27,7 @@
 </head>
 <body>
     <div class="auth-screen">
-        <button class="back-btn" onclick="window.location.href='dashboard.html'">
+        <button class="back-btn" data-action="back-to-dashboard">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" width="20" height="20">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 12H5m7-7l-7 7 7 7"/>
             </svg>
